skillz-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moodle
  namespace: skillz-dev
spec:
  rules:
  - host: skillz.cybe.tech
    http:
      paths:
      - backend:
          service:
            name: moodle
            port:
              number: 8080
        path: /
        pathType: Prefix
